<resources>
    <string name="app_name">carona solidaria</string>
    <string name="title_activity_mapa_principal">Mapa principal</string>
    <string name="drawer_open">Abrindo</string>
    <string name="drawer_close">fechando</string>
    <string name="title_activity_adicionar_carona">Adicionar carona</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_adicionar_veiculo">Adicionar veiculo</string>
    <string name="title_activity_listar_caronas">Listar caronas</string>
    <string-array name="horas">
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>0:00</item>
    </string-array>
    <string-array name="spnCor">
	<item >
      AMARELA
    </item><item >
      AZUL
    </item><item >
      BEGE
    </item><item >
      BRANCA
    </item><item >
      CINZA
    </item><item >
      DOURADA
    </item><item >
      GRENA
    </item><item >
      LARANJA
    </item><item >
      MARROM
    </item><item >
      PRATA
    </item><item >
      PRETA
    </item><item >
      ROSA
    </item><item >
      ROXA
    </item><item >
      VERDE
    </item><item >
      VERMELHA
    </item><item>
      FANTASIA
    </item>
    </string-array>
    <string-array name="spnMarca">
    <item>
       AGRALE
    </item><item >
       ALFA ROMEO
    </item><item >
       AM GENERAL HUMMER
    </item><item >
       AMERICAR
    </item><item >
       ASTON MARTIN
    </item><item >
       AUDI
    </item><item >
       BENTLEY
    </item><item>
       BMW
    </item><item>
       CADILLAC
    </item><item>
       CHAMONIX
    </item><item>
       CHERY
    </item><item>
       CHEVROLET
    </item><item>
       CHRYSLER
    </item><item>
       CITROEN
    </item><item>
       CROSS LANDER
    </item><item>
       DODGE
    </item><item>
       FABRICANTES DIVERSOS
    </item><item>
       FERRARI
    </item><item>
       FIAT
    </item><item>
       FORD
    </item><item>
       GONOW
    </item><item>
       HAFEI
    </item><item>
       HONDA
    </item><item>
       HYUNDAI
    </item><item>
       INFINITI
    </item><item>
       JAC
    </item><item>
       JAGUAR
    </item><item>
       JEEP
    </item><item>
       KIA
    </item><item>
       LAMBORGHINI
    </item><item>
       LAND ROVER
    </item><item>
       LEXUS
    </item><item>
       LIFAN
    </item><item>
       LINCOLN
    </item><item>
       LOTUS
    </item><item>
       MASERATI
    </item><item>
       MERCEDES-BENZ
    </item><item>
       MG
    </item><item>
       MINI COOPER
    </item><item >
       MITSUBISHI
    </item><item>
       NISSAN
    </item><item>
       PEUGEOT
    </item><item>
       PONTIAC
    </item><item >
       PORSCHE
    </item><item >
       RENAULT
    </item><item >
       SATURN
    </item><item>
       SCION
    </item><item>
       SMART
    </item><item>
       SSANGYONG
    </item><item>
       SUBARU
    </item><item>
       SUZUKI
    </item><item>
       TAC
    </item><item>
       TOYOTA
    </item><item>
       TROLLER
    </item><item>
       VOLKSWAGEN
    </item><item>
       VOLVO
    </item>
    </string-array>

    <string name="lblDadosDoVeiculo">Dados do Veículo</string>
    <string name="lblPlaca">Placa</string>
    <string name="lblTipo">Tipo</string>
    <string name="lblMarca">Marca</string>
    <string name="lblModelo">Modelo</string>
    <string name="lblCor">Cor</string>
    <string name="login_invalido">E-mail ou senha inválidos</string>
    <string name="erro_servidor">Não foi possível conectar-se ao servidor</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuarioActivity</string>
    <string name="cadastro_usuario_email_hint">Email institucional do usuário</string>
    <string name="password_confirm">Confirme a senha</string>
    <string name="registrar">CADASTRAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="password">Senha</string>
    <string name="cadastro_usuario_nome_hint">Insira o seu nome</string>
</resources>
