<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.org.carona.caronasolidaria.controller.CadastroUsuarioActivity"
    android:orientation="vertical"
    android:gravity="top"
    >
    <ProgressBar android:id="@+id/activity_cadastro_usuario_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:visibility="gone"
        android:indeterminate="false" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/cadastro_usuario_email_hint"
        android:ems="10"
        android:id="@+id/activity_cadastro_usuario_email_et" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/activity_cadastro_usuario_senha_et"
        android:hint="@string/password" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/activity_cadastro_usuario_senha_confirma_et"
        android:hint="@string/password_confirm" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:orientation="horizontal">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/holo_blue_dark"
            android:onClick="cancelarOnclick"
            android:id="@+id/customer_form_cancel" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/holo_blue_dark"
            android:onClick="cadastroOnclick"
            android:id="@+id/activity_cadastro_usuario_cadastro_bt"
            android:layout_alignTop="@+id/customer_form_cancel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>

</LinearLayout>

